--- a/index.html
+++ b/index.html
@@ -3,36 +3,186 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C.S.D. CONSTITUCIÓN - Oficial</title>
+    <title>C.S.D. Constitución | Sitio Oficial</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --amarillo: #f1c40f; --negro: #1a1a1a; --blanco: #ffffff; }
-        body { font-family: 'Segoe UI', sans-serif; margin: 0; background-color: var(--negro); color: var(--blanco); text-align: center; }
-        header { background-color: var(--negro); padding: 20px; border-bottom: 3px solid var(--amarillo); }
-        .logo { width: 120px; height: 120px; border-radius: 50%; border: 3px solid var(--amarillo); margin-bottom: 10px; }
-        .hero { padding: 80px 20px; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('img/estadio.jpg'); background-size: cover; background-position: center; }
-        h1 { color: var(--amarillo); margin: 5px 0; text-transform: uppercase; letter-spacing: 2px; }
-        .slogan { color: var(--amarillo); font-size: 0.8rem; margin-bottom: 20px; }
-        .btn-socio { display: inline-block; background-color: var(--amarillo); color: var(--negro); padding: 15px 30px; text-decoration: none; font-weight: bold; border-radius: 25px; transition: 0.3s; }
-        nav { margin: 15px 0; }
-        nav a { color: var(--blanco); margin: 0 15px; text-decoration: none; font-weight: bold; }
+        :root {
+            --amarillo: #fbc02d;
+            --negro: #000000;
+            --gris-oscuro: #1a1a1a;
+            --blanco: #ffffff;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: var(--negro);
+            color: var(--blanco);
+        }
+
+        /* Navbar Principal */
+        .navbar {
+            background-color: var(--amarillo);
+            padding: 10px 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: var(--negro);
+            text-decoration: none;
+            font-weight: bold;
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        /* Marquesina Dinámica */
+        .marquee-container {
+            background-color: var(--gris-oscuro);
+            color: var(--amarillo);
+            padding: 12px 0;
+            border-bottom: 2px solid var(--amarillo);
+            overflow: hidden;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            min-height: 20px;
+        }
+
+        .marquee-content {
+            display: inline-block;
+            white-space: nowrap;
+            font-weight: 900;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+            position: relative;
+            animation: pausaCentroLenta 16s ease-in-out infinite;
+        }
+
+        @keyframes pausaCentroLenta {
+            0% { transform: translateX(110vw); }
+            35% { transform: translateX(0); }
+            65% { transform: translateX(0); }
+            100% { transform: translateX(-110vw); }
+        }
+
+        /* Hero Section */
+        .hero {
+            height: 80vh;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
+                        url('https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&q=80');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .logo-central {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid var(--amarillo);
+            margin-bottom: 20px;
+            box-shadow: 0 0 25px rgba(251, 192, 45, 0.4);
+        }
+
+        .hero h1 {
+            font-size: 3.5rem;
+            margin: 0;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
+        }
+
+        .hero p {
+            color: var(--amarillo);
+            font-style: italic;
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+
+        .btn-socio {
+            background-color: var(--amarillo);
+            color: var(--negro);
+            padding: 15px 35px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: 900;
+            transition: 0.3s;
+            box-shadow: 0 5px 15px rgba(251, 192, 45, 0.2);
+        }
+
+        .btn-socio:hover {
+            transform: scale(1.05);
+            background-color: #ffffff;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <img src="img/logo.png" alt="Logo" class="logo">
-        <h1>C.S.D. CONSTITUCIÓN</h1>
-        <div class="slogan">ORGULLO DE SAN RAFAEL</div>
-    </header>
-    <nav>
-        <a href="index.html">INICIO</a>
-        <a href="socios.html">SOCIOS</a>
-        <a href="admin_login.html">ADMIN</a>
+
+    <nav class="navbar">
+        <a href="index.html"><i class="fas fa-home"></i> INICIO</a>
+        <a href="el_club.html"><i class="fas fa-shield-alt"></i> EL CLUB</a>
+        <a href="liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
+        <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
+        <a href="#"><i class="fas fa-envelope"></i> CONTACTO</a>
+        <a href="ad_master/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
     </nav>
+
+    <div class="marquee-container">
+        <div id="marquesina-dinamica" class="marquee-content">
+            CARGANDO PRÓXIMA FECHA...
+        </div>
+    </div>
+
     <section class="hero">
-        <h2 style="font-size: 2.5rem;">MÁS QUE UN CLUB,<br>UNA FAMILIA</h2>
-        <p>Desde el corazón de San Rafael para toda la provincia.</p>
-        <a href="socios.html" class="btn-socio">HACETE SOCIO AHORA</a>
+        <img src="logo.jpg" alt="Logo Constitución" class="logo-central" onerror="this.src='https://via.placeholder.com/150'">
+        <h1>C.S.D. CONSTITUCIÓN</h1>
+        <p>El sentimiento que nos une, el orgullo de San Rafael</p>
+        <a href="SoySocio.html" class="btn-socio"><i class="fas fa-user-plus"></i> HACETE SOCIO</a>
     </section>
+
+    <script>
+        function actualizarMarquesina() {
+            const partidoGuardado = localStorage.getItem('proximoPartido');
+            const marquesinaTexto = document.getElementById('marquesina-dinamica');
+
+            if (partidoGuardado) {
+                try {
+                    const datos = JSON.parse(partidoGuardado);
+                    // Usamos datos.lugar para coincidir con el panel de administración
+                    const rival = datos.rival || "RIVAL A CONFIRMAR";
+                    const fecha = datos.fecha || "TBD";
+                    const hora = datos.hora || "--:--";
+                    const estadio = datos.lugar || "ESTADIO A CONFIRMAR";
+
+                    marquesinaTexto.innerHTML = `PRÓXIMA FECHA: CONSTITUCIÓN vs ${rival} | FECHA: ${fecha} | HORA: ${hora} HS | ESTADIO: ${estadio} | ¡YA PODÉS SACAR TU ENTRADA!`;
+                } catch (e) {
+                    console.error("Error al leer datos del partido", e);
+                    marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!";
+                }
+            } else {
+                marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!";
+            }
+        }
+
+        // Carga inicial
+        window.onload = actualizarMarquesina;
+
+        // Sincronización en tiempo real entre pestañas
+        window.addEventListener('storage', (e) => {
+            if (e.key === 'proximoPartido') {
+                actualizarMarquesina();
+            }
+        });
+    </script>
 </body>
 </html>
