cambios de ultima hora

--- a/contacto.html
+++ b/contacto.html
@@ -178,15 +178,14 @@
 <body>
 
     <header>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="el_club.html">El Club</a>
-            <a href="liga.html">
-                <i class="fas fa-futbol"></i> Próximo Partido
-            </a>
-            <a href="socios.html">Socios</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+        <nav class="navbar">
+        <a href="index.html"><i class="fas fa-home"></i> INICIO</a>
+        <a href="el_club.html"><i class="fas fa-shield-alt"></i> EL CLUB</a>
+        <a href="liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
+        <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
+        <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
+        <a href="ad_master/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
+    </nav>
     </header>
 
     <div class="container">
@@ -194,7 +193,7 @@
             <img src="img/logo.jpg" alt="Logo Club" class="logo-contacto">
             <h2>Contacto</h2>
             <div class="detalles-contacto">
-                <p><i class="fas fa-map-marker-alt"></i> Av. Telles Meneses & Paula Albarracín de Sarmiento, San Rafael, Mendoza</p>
+                <p><i class="fas fa-map-marker-alt"></i> Av. Comodoro Pi & Paula Albarracín de Sarmiento, San Rafael, Mendoza</p>
                 <p><i class="fas fa-phone"></i> +54 260 400-0000</p>
                 <p><i class="fas fa-envelope"></i> contacto@clubconstitucion.com</p>
                 <p><i class="fab fa-instagram"></i> @clubconstitucion_oficial</p>
