--- a/cuotas.html
+++ b/cuotas.html
@@ -58,7 +58,7 @@
 <body>
 
 <div class="container">
-    <a href="javascript:history.back()" class="btn-volver">
+    <a href="SoySocio.html" class="btn-volver">
         <i class="fas fa-arrow-left"></i> VOLVER
     </a>
 
