--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <a href="el_club.html"><i class="fas fa-shield-alt"></i> EL CLUB</a>
         <a href="liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
         <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
-        <a href="#"><i class="fas fa-envelope"></i> CONTACTO</a>
+        <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
         <a href="ad_master/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
     </nav>
 
