se coloca foto que reemplace al pergil en administrador

--- a/ad_master/administrar_club.html
+++ b/ad_master/administrar_club.html
@@ -73,17 +73,17 @@
                 <h3>Comisión Directiva</h3>
                 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 15px;">
                     <div class="preview-box">
-                        <img id="img-p" src=""><label>Presidente</label>
+                        <img id="img-p" src="perfil.png"><label>Presidente</label>
                         <input type="text" id="nom-p" placeholder="Nombre">
                         <input type="file" onchange="leerImg(this, 'img-p')" style="font-size:0.7rem">
                     </div>
                     <div class="preview-box">
-                        <img id="img-v" src=""><label>Vicepresidente</label>
+                        <img id="img-v" src="perfil.png"><label>Vicepresidente</label>
                         <input type="text" id="nom-v" placeholder="Nombre">
                         <input type="file" onchange="leerImg(this, 'img-v')" style="font-size:0.7rem">
                     </div>
                     <div class="preview-box">
-                        <img id="img-s" src=""><label>Secretario</label>
+                        <img id="img-s" src="perfil.png"><label>Secretario</label>
                         <input type="text" id="nom-s" placeholder="Nombre">
                         <input type="file" onchange="leerImg(this, 'img-s')" style="font-size:0.7rem">
                     </div>
