se agrega png perfil

--- a/liga.html
+++ b/liga.html
@@ -38,9 +38,9 @@
         <div class="card-proximo">
             <span style="color: var(--amarillo); font-weight: bold; letter-spacing: 2px;">PRÓXIMO ENCUENTRO</span>
             <div class="vs-box">
-                <div class="escudo"><img id="logoLocal" src="" alt="C.S.D.C"></div>
+                <div class="escudo"><img id="logoLocal" src="perfil.png" alt="C.S.D.C"></div>
                 <div style="font-size: 1.5rem; font-weight: 900;">VS</div>
-                <div class="escudo"><img id="logoRival" src="" alt="RIVAL"></div>
+                <div class="escudo"><img id="logoRival" src="perfil.png" alt="RIVAL"></div>
             </div>
             <div id="nombreRival" style="margin-bottom: 15px; font-weight: bold; color: var(--amarillo);">---</div>
 
