--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             z-index: 1000;
         }
 
-        .navbar a {
+        .navbar a, .dropbtn {
             color: var(--negro);
             text-decoration: none;
             font-weight: bold;
@@ -41,96 +41,135 @@
             display: flex;
             align-items: center;
             gap: 5px;
+            cursor: pointer;
+            background: none;
+            border: none;
+            padding: 0;
+            font-family: inherit;
         }
 
-        /* Marquesina Dinámica */
-        .marquee-container {
+        /* Dropdown */
+        .dropdown { position: relative; display: inline-block; }
+        .dropdown-content {
+            display: none;
+            position: absolute;
             background-color: var(--gris-oscuro);
-            color: var(--amarillo);
-            padding: 12px 0;
-            border-bottom: 2px solid var(--amarillo);
-            overflow: hidden;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            min-height: 20px;
+            min-width: 180px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+            z-index: 1;
+            top: 100%;
+            border: 1px solid var(--amarillo);
+        }
+        .dropdown-content a { color: var(--amarillo); padding: 12px 16px; text-decoration: none; display: block; text-transform: uppercase; font-size: 0.8rem; }
+        .dropdown-content a:hover { background-color: var(--amarillo); color: var(--negro); }
+        .dropdown:hover .dropdown-content { display: block; }
+
+        /* Modal */
+        .modal-overlay {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.85);
+            display: flex; justify-content: center; align-items: center;
+            z-index: 2000; visibility: hidden; opacity: 0; transition: 0.3s;
+        }
+        .modal-content {
+            background: var(--blanco); color: var(--negro);
+            width: 90%; max-width: 450px; padding: 30px; border-radius: 15px;
+            text-align: center; border: 5px solid var(--amarillo);
+            transform: scale(0.7); transition: 0.3s;
+        }
+        .modal-active { visibility: visible; opacity: 1; }
+        .modal-active .modal-content { transform: scale(1); }
+
+        .btn-cerrar {
+            background: var(--negro); color: var(--blanco);
+            border: 2px solid var(--amarillo); padding: 10px 40px;
+            font-weight: bold; cursor: pointer; text-transform: uppercase; border-radius: 5px;
         }
 
-        .marquee-content {
-            display: inline-block;
-            white-space: nowrap;
-            font-weight: 900;
-            letter-spacing: 1.5px;
-            text-transform: uppercase;
-            position: relative;
-            animation: pausaCentroLenta 16s ease-in-out infinite;
-        }
-
-        @keyframes pausaCentroLenta {
-            0% { transform: translateX(110vw); }
-            35% { transform: translateX(0); }
-            65% { transform: translateX(0); }
-            100% { transform: translateX(-110vw); }
-        }
+        /* Marquesina */
+        .marquee-container { background-color: var(--gris-oscuro); color: var(--amarillo); padding: 12px 0; border-bottom: 2px solid var(--amarillo); overflow: hidden; display: flex; justify-content: center; }
+        .marquee-content { display: inline-block; white-space: nowrap; font-weight: 900; text-transform: uppercase; animation: pausaCentroLenta 16s ease-in-out infinite; }
+        @keyframes pausaCentroLenta { 0% { transform: translateX(110vw); } 35% { transform: translateX(0); } 65% { transform: translateX(0); } 100% { transform: translateX(-110vw); } }
 
         /* Hero Section */
         .hero {
             height: 80vh;
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
                         url('https://images.unsplash.com/photo-1574629810360-7efbbe195018?auto=format&fit=crop&q=80');
-            background-size: cover;
-            background-position: center;
+            background-size: cover; background-position: center;
+            display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;
+        }
+
+        .logo-central { width: 150px; height: 150px; border-radius: 50%; border: 4px solid var(--amarillo); margin-bottom: 20px; }
+
+        /* Contenedor de Botones */
+        .hero-buttons {
             display: flex;
-            flex-direction: column;
+            gap: 15px;
+            flex-wrap: wrap;
             justify-content: center;
+        }
+
+        .btn-main {
+            padding: 15px 30px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: 900;
+            transition: 0.3s;
+            display: flex;
             align-items: center;
-            text-align: center;
-        }
-
-        .logo-central {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 4px solid var(--amarillo);
-            margin-bottom: 20px;
-            box-shadow: 0 0 25px rgba(251, 192, 45, 0.4);
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin: 0;
-            text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
-        }
-
-        .hero p {
-            color: var(--amarillo);
-            font-style: italic;
-            font-size: 1.2rem;
-            margin-bottom: 30px;
+            gap: 10px;
+            text-transform: uppercase;
         }
 
         .btn-socio {
             background-color: var(--amarillo);
             color: var(--negro);
-            padding: 15px 35px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: 900;
-            transition: 0.3s;
             box-shadow: 0 5px 15px rgba(251, 192, 45, 0.2);
         }
 
-        .btn-socio:hover {
+        /* NUEVO BOTÓN APP */
+        .btn-app {
+            background-color: transparent;
+            color: var(--blanco);
+            border: 2px solid var(--amarillo);
+        }
+
+        .btn-main:hover {
             transform: scale(1.05);
-            background-color: #ffffff;
+            background-color: var(--blanco);
+            color: var(--negro);
         }
     </style>
 </head>
 <body>
 
+    <div class="modal-overlay" id="modalCuotas">
+        <div class="modal-content">
+            <img src="logo.jpg" alt="Logo" style="width: 80px; height: 80px; border-radius: 50%; border: 2px solid var(--amarillo); margin-bottom: 10px;" onerror="this.src='https://via.placeholder.com/80'">
+            <h2 style="margin-bottom: 5px;">PONETE AL DÍA</h2>
+            <p style="font-style: italic; color: #555; margin-bottom: 20px;">"El club lo hacemos entre todos, tu aporte nos ayuda a seguir creciendo"</p>
+            <div style="background: var(--amarillo); color: black; padding: 15px; border-radius: 10px; font-weight: 900; margin-bottom: 20px; text-transform: uppercase;">
+                TENEMOS UN PLAN DE PAGO A TU MEDIDA
+            </div>
+            <p style="font-size: 0.9rem; margin-bottom: 20px;">Consultas en la secretaría o Gestión de Cobros.</p>
+            <button class="btn-cerrar" onclick="cerrarModal()">CERRAR</button>
+        </div>
+    </div>
+
     <nav class="navbar">
         <a href="index.html"><i class="fas fa-home"></i> INICIO</a>
         <a href="el_club.html"><i class="fas fa-shield-alt"></i> EL CLUB</a>
+        <div class="dropdown">
+            <button class="dropbtn"><i class="fas fa-list-ul"></i> DIVISIONES <i class="fas fa-caret-down"></i></button>
+            <div class="dropdown-content">
+                <a href="/divisiones/primera.html">Primera División</a>
+                <a href="/divisiones/reserva.html">Reserva</a>
+                <a href="/divisiones/inferiores.html">Inferiores</a>
+                <a href="/divisiones/fem.html">Canaritas</a>
+            </div>
+        </div>
         <a href="liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
         <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
         <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
@@ -138,51 +177,47 @@
     </nav>
 
     <div class="marquee-container">
-        <div id="marquesina-dinamica" class="marquee-content">
-            CARGANDO PRÓXIMA FECHA...
-        </div>
+        <div id="marquesina-dinamica" class="marquee-content">CARGANDO PRÓXIMA FECHA...</div>
     </div>
 
     <section class="hero">
         <img src="logo.jpg" alt="Logo Constitución" class="logo-central" onerror="this.src='https://via.placeholder.com/150'">
         <h1>C.S.D. CONSTITUCIÓN</h1>
         <p>El sentimiento que nos une, el orgullo de San Rafael</p>
-        <a href="SoySocio.html" class="btn-socio"><i class="fas fa-user-plus"></i> HACETE SOCIO</a>
+        
+        <div class="hero-buttons">
+            <a href="SoySocio.html" class="btn-main btn-socio">
+                <i class="fas fa-user-plus"></i> HACETE SOCIO
+            </a>
+            
+            <a href="#" class="btn-main btn-app">
+                <i class="fas fa-mobile-alt"></i> DESCARGÁ NUESTRA APP
+            </a>
+        </div>
     </section>
 
     <script>
+        window.onload = function() {
+            setTimeout(() => {
+                document.getElementById('modalCuotas').classList.add('modal-active');
+            }, 1000);
+            actualizarMarquesina();
+        };
+
+        function cerrarModal() {
+            document.getElementById('modalCuotas').classList.remove('modal-active');
+        }
+
         function actualizarMarquesina() {
             const partidoGuardado = localStorage.getItem('proximoPartido');
             const marquesinaTexto = document.getElementById('marquesina-dinamica');
-
             if (partidoGuardado) {
                 try {
                     const datos = JSON.parse(partidoGuardado);
-                    // Usamos datos.lugar para coincidir con el panel de administración
-                    const rival = datos.rival || "RIVAL A CONFIRMAR";
-                    const fecha = datos.fecha || "TBD";
-                    const hora = datos.hora || "--:--";
-                    const estadio = datos.lugar || "ESTADIO A CONFIRMAR";
-
-                    marquesinaTexto.innerHTML = `PRÓXIMA FECHA: CONSTITUCIÓN vs ${rival} | FECHA: ${fecha} | HORA: ${hora} HS | ESTADIO: ${estadio} | ¡YA PODÉS SACAR TU ENTRADA!`;
-                } catch (e) {
-                    console.error("Error al leer datos del partido", e);
-                    marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!";
-                }
-            } else {
-                marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!";
-            }
+                    marquesinaTexto.innerHTML = `PRÓXIMA FECHA: CONSTITUCIÓN vs ${datos.rival || 'TBD'} | FECHA: ${datos.fecha || 'TBD'} | HORA: ${datos.hora || '--:--'} HS | ESTADIO: ${datos.lugar || 'A CONFIRMAR'}`;
+                } catch (e) { marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!"; }
+            } else { marquesinaTexto.innerHTML = "PRÓXIMO PARTIDO A CONFIRMAR - ¡VAMOS CONSTITUCIÓN!"; }
         }
-
-        // Carga inicial
-        window.onload = actualizarMarquesina;
-
-        // Sincronización en tiempo real entre pestañas
-        window.addEventListener('storage', (e) => {
-            if (e.key === 'proximoPartido') {
-                actualizarMarquesina();
-            }
-        });
     </script>
 </body>
 </html>
