se arregla enlace

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <a href="/divisiones/fem.html">Canaritas</a>
             </div>
         </div>
-        <a href="liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
+       <a href="../liga.html"><i class="fas fa-futbol"></i> PRÓXIMO PARTIDO</a>
         <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
         <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
         <a href="ad_master/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
